# cbeepsynth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  fm_algo_gen.lua
include/: beepbox_instrument_data.h  beepbox_synth.h
song/: CMakeLists.txt
song/include/: beepbox.h
song/src/: song.c  song_loader.c  test.c  vector.c  vector.h
src/: chip.c  chip.h  envelope.c  envelope.h  fft.c  fft.h  filtering.c  filtering.h  fm.c  fm.h  fm_algo.h  harmonics.c  harmonics.h  instrument.c  instrument.h  public.c  util.h  wave.c  wave.h  wavetables.c  wavetables.h
synth/: CMakeLists.txt
synth/include/: beepbox_instrument_data.h  beepbox_synth.h
synth/src/: alloc.c  alloc.h  audio.c  audio.h  context.c  context.h  envelope.c  envelope.h  fft.c  fft.h  filtering.c  filtering.h  fm.c  fm.h  instrument.c  instrument.h  log.c  log.h  param_util.c  param_util.h  public.c  util.c  util.h  wave.c  wave.h  wavetables.c  wavetables.h
synth/src/fx/: bitcrusher.c  bitcrusher.h  chorus.c  chorus.h  distortion.c  distortion.h  echo.c  echo.h  effect.h  eq.c  eq.h  limiter.c  limiter.h  panning.c  panning.h  reverb.c  reverb.h  volume.c  volume.h
synth/src/inst/: fm.c  fm.h  fm_algo.c  instrument.c  instrument.h  wave.h
synth/src/synth/: fm.c  fm.h  fm_algo.c  fm_algo.h  noise.c  noise.h  picked.c  pwm.c  pwm.h  spectrum.c  spectrum.h  synth.c  synth.h  wave.c  wave.h
tests/: CMakeLists.txt  tests.c
